# keywords-counter

./: Dockerfile.counter  Dockerfile.restapi  docker-compose.yaml  pyproject.toml  readme.md  stress_test.py
counter/: main.py
k8s-deployment/: counter-deployment.yaml  counter-hpa.yaml  redis-statefulset.yaml  restapi-deployment.yaml  restapi-hpa.yaml  restapi-service.yaml
restapi/: main.py
